--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -7,10 +7,9 @@ build_requires:
   ExtUtils::MakeMaker: 6.36
   Test::More: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.36
-distribution_type: module
-dynamic_config: 1
-generated_by: 'Module::Install version 1.06'
+  ExtUtils::MakeMaker: 0
+dynamic_config: 0
+generated_by: 'Module::Install version 1.06, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -26,7 +25,7 @@ requires:
   MooseX::Types: 0
   MooseX::Types::Moose: 0
   PDF::API2: 0
+  Test::More: 0
 resources:
   license: http://dev.perl.org/licenses/
-  repository: https://github.com/grzegorzpapkala/PDF-TableX
 version: 0.013
